--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>First DEV</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>This is a heading</h1>
-  <h2>this is heading two</h2>
-  <p>my name is masum . i read in clas  11. in shyamoli ideal engineering college. i read in 7th semester in thi sinstitute.</p>
+  <img src="image/logo.png"/>
+     <a href="https://www.youtube.com/mtechtutors/" target="_blank"><h1 class="red bol">M-Tech Tutors</h1></a>
+     <p>This is my You Tube Channel.</p>
 </body>
 </html>
