--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>First DEV</title>
-    <link rel="stylesheet" href="style.css">
+  <title>Web Dev</title>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
-  <img src="image/logo.png"/>
-     <a href="https://www.youtube.com/mtechtutors/" target="_blank"><h1 class="red bol">M-Tech Tutors</h1></a>
-     <p>This is my You Tube Channel.</p>
+  <img src="image/logo.png">
+    <h1>M-Tech Tutors</h1>
+      <p><a href="https://www.youtube.com/mtechtutors/" target="_blank">Click Here</a> for visit.</p>
 </body>
 </html>
